# skillfoundry

./: .gitignore  .gitmodules  AGENT_BRIEF_WP0.md  AGENT_BRIEF_WP1.md  AGENT_BRIEF_WP10.md  AGENT_BRIEF_WP15.md  AGENT_BRIEF_WP2.md  AGENT_BRIEF_WP4.md  AGENT_BRIEF_WP7.md  HANDOFF.md  LICENSE  Makefile  README.md  WHITEPAPER.md  pyproject.toml
docs/: ACCEPTANCE_PLAN.md  ADAPTIVE_STEERING_IMPLEMENTATION_PLAN.md  ADAPTIVE_STEERING_SUBSTRATE_EXTRACTION_PLAN.md  AGENT_WORK_SUBSTRATE_VISION.md  API_UI.md  ARCHITECTURE.md  CODEX_GOAL_ADAPTIVE_STEERING_EXECUTION_PLAN.md  CODEX_WORKER_PILOT.md  CONTEXTFORGE_AGENT_EXOSKELETON_PRODUCT_VISION.md  CONTEXTFORGE_GOAL_HARNESS_REBUILD_PLAN.md  CONTROLLED_LLM_STEERING_UPGRADE_PLAN.md  CONTROL_SYSTEM_ARCHITECTURE_HEALTH_REPORT.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_ROADMAP_AUDIT.md  DEVELOPMENT_WORKFLOW.md  FORGEUNIT_PRODUCT_ADAPTER_SLICE.md  FORGEUNIT_REAL_CODEX_EXEC_PILOT.md  FORGEUNIT_SKILLFOUNDRY_COMPOSITION.md  FRESH_CLONE_GATE.md  FRONTDESK_FORGEUNIT_COMMAND_PILOT_RUNBOOK.md  FRONTDESK_LIVE_SEMANTIC_EVAL.md  FRONT_DESK_AGENT_ROADMAP.md  FRONT_DESK_CORE_NEED_REFACTOR.md  FRONT_DESK_ROADMAP_AUDIT.md  LEGACY_COMPATIBILITY.md  PI_WORKER_MVP.md  PRODUCTION_READINESS.md  PRODUCT_VALIDATION_CODEXARIUM_REBUILD_PLAN.md  PUBLIC_API.md  README.md  RECURSIVE_AGENT_ORGANIZATION_VISION.md  ROADMAP.md  ROADMAP_EXECUTION_PLAN.md  SECURITY_CHECKLIST.md  SKILLFOUNDRY_CAPABILITY_BUNDLE_VISION.md  SKILLFOUNDRY_CLEANUP_COMPLETION_PLAN.md  SKILLFOUNDRY_CONTEXTFORGE_REFACTOR_PLAN.md  SKILLFOUNDRY_ON_FORGEUNIT_PRODUCT_DIRECTION.md  (+7 more)
pi_worker/: package.json
(+156 files in other folders)
