[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillfoundry"
version = "0.1.0"
description = "Workspace and schema foundation for SkillFoundry."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
