[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillfoundry"
version = "0.1.0"
description = "Workspace and schema foundation for SkillFoundry."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "contextforge==0.1.0",
  "langgraph>=0.2.0",
  "PyYAML>=6.0",
]

[project.scripts]
skillfoundry = "skillfoundry.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]
forgeunit = [
  "forgeunit @ git+ssh://git@github.com/manstein-lzn/forgeunit.git@v1.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
contextforge = { path = "third_party/contextforge", editable = true }

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
